# asset-pilot-fastapi

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  initial_setup.md  pyproject.toml  requirements.txt
.claude/commands/: audit-spec.md  run-spec.md  start_planning.md  test-spec.md
.github/workflows/: deploy.yml
_docs/: API_AUDIT_REPORT.md  API_DOCUMENTATION.md  IMPLEMENTATION_PLAN.md  IT_ADMIN_API_FLOW.md  IT_ADMIN_FE_DESIGN.html  WORKFLOWS.md  initial_setup.md
alembic/: env.py
alembic/versions/: 19fa64831348_create_itam_schema.py  cde138860334_baseline.py
app/: main.py
app/api/: health.py
app/core/: config.py  exceptions.py  logging.py  security.py
app/db/: base.py  redis.py  session.py
app/models/: __init__.py  device_log.py  enums.py  extension_request.py  handover_request.py  item.py  item_category.py  request.py  support_request.py  user.py
app/repositories/: base.py  cache_repository.py  device_log_repository.py  extension_request_repository.py  handover_request_repository.py  health_repository.py  item_category_repository.py  item_repository.py  request_repository.py  support_request_repository.py  user_repository.py
app/schemas/: assignment.py  auth.py  dashboard.py  device_log.py  extension.py  handover.py  health.py  item.py  ping.py  request.py  shipping.py  support.py  user.py
app/services/: assignment_service.py  auth_service.py  dashboard_service.py  device_log_service.py  dropdown_service.py  extension_service.py  handover_service.py  health_service.py  inventory_service.py  (+5 more)
scripts/: add_user.py  create_db.py  seed.py
specs/: 00_CONTEXT.md  M01_domain_models_and_migration.md  M02_auth_and_rbac.md  M03_seed_data.md  M04_device_audit_log.md  M05_inventory_device_detail_dropdowns.md  M06_user_management.md  M07_request_management_and_approval_queue.md  M08_device_assignment_and_direct_assign.md  M09_wfh_shipping_and_returns.md  M10_support_requests.md  M11_extension_requests.md  M12_handovers_readonly_audit.md  M13_admin_dashboard.md  README.md
terraform/: main.tf
tests/: conftest.py
(+46 files in other folders)
