[project]
name = "asset-pilot-fastapi"
version = "0.1.0"
description = "IT Asset Management / Ticket Management / AI Chatbot backend (foundational scaffold)"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.18.5",
    "asyncpg==0.31.0",
    "bcrypt==5.0.0",
    "fastapi==0.139.0",
    "gunicorn==26.0.0",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.2",
    "pyjwt[crypto]==2.13.0",
    "python-multipart==0.0.32",
    "redis==8.0.1",
    "sqlalchemy[asyncio]==2.0.51",
    "structlog==26.1.0",
    "uvicorn[standard]==0.50.0",
]

[dependency-groups]
dev = [
    "httpx==0.28.1",
    "mypy==2.1.0",
    "pre-commit==4.6.0",
    "pytest==9.1.1",
    "pytest-asyncio==1.4.0",
    "pytest-cov==7.1.0",
    "ruff==0.15.20",
]

[tool.pytest.ini_options]
cache_dir = "/tmp/.pytest_cache"
asyncio_mode = "auto"
# The app's DB engine / Redis pool are module-level singletons created
# once at import time (matching production, where they live for the
# process lifetime) — a session-scoped loop keeps every test on the same
# event loop those singletons were created on. Per-test loops (the
# pytest-asyncio default) would otherwise break them on the 2nd test with
# "RuntimeError: Event loop is closed".
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
markers = [
    "unit: fast tests with no external dependencies",
    "integration: tests requiring live Postgres/Redis (docker-compose)",
]

[tool.ruff]
line-length = 110
target-version = "py312"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC"]
ignore = ["B008"]  # FastAPI's Depends()-as-default-argument pattern

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
exclude = ["alembic/"]

[[tool.mypy.overrides]]
module = "gunicorn.*"
ignore_missing_imports = true

[tool.coverage.run]
source = ["app"]
omit = ["app/main.py"]
